# NeuralCVAT

./: .gitignore  README.md  main.py  pyproject.toml
configs/: default.yaml
src/neural_cvat/: __init__.py  cli.py  types.py  utils.py
src/neural_cvat/dataset/: __init__.py  coco_export.py  coco_io.py  crops.py  merge.py  split.py  trim.py  yolo_export.py
src/neural_cvat/inference/: __init__.py  pipeline.py
src/neural_cvat/models/: __init__.py  classifier.py  detector.py  hf_detector.py  plate_ocr.py  yolo_detector.py
src/neural_cvat/train/: __init__.py  classifier.py  detector.py
