[project]
name = "neural-cvat"
version = "0.1.0"
description = "COCO dataset tools, detector fine-tuning, and CVAT pre-annotation pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.3.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "timm>=1.0.0",
    "rapidocr-onnxruntime>=1.3.0",
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "pycocotools>=2.0.7",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "pyyaml>=6.0.0",
    "Pillow>=10.0.0",
    "scikit-learn>=1.4.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
easyocr = ["easyocr>=1.7.0"]
sahi = ["sahi>=0.11.0"]
hf = ["datasets>=2.19.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
neural-cvat = "neural_cvat.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# Linux: CUDA-сборки torch/torchvision с https://download.pytorch.org/whl/cu128
# macOS/Windows: обычные колёса с PyPI (CPU / MPS)
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128", marker = "sys_platform == 'linux'" }
torchvision = { index = "pytorch-cu128", marker = "sys_platform == 'linux'" }
